--- a/covid_test.ipynb
+++ b/covid_test.ipynb
@@ -3399,6 +3399,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# filtering data to delete the other cvalue from corona\n",
         "print(\"Original DataFrame shape:\", data.shape)\n",
         "df_filtered = data[data['Corona'] != 'other']\n",
         "print(\"Filtered DataFrame shape:\", df_filtered.shape)\n",
